--- a/web/src/index.css
+++ b/web/src/index.css
@@ -10,6 +10,22 @@
   font-display: swap;
 }
 
+/* Ensure body and html have black background */
+html, body {
+  background-color: #000000;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+#root {
+  background-color: #000000;
+  min-height: 100vh;
+  width: 100%;
+}
+
 /* Hide scrollbar for carousel */
 .scrollbar-hide {
   -ms-overflow-style: none;  /* IE and Edge */
